# wfmreplet

./: .replit  README.md  app.py  encryption_key.key  pyproject.toml  replit.md  setup_database.py
attached_assets/: Pasted--A-design-for-a-workflow-management-system-to-replicate-the-provided-flowchart-would-include-a-workf-1755925406989_1755925406990.txt  Pasted--A-design-for-a-workflow-management-system-to-replicate-the-provided-flowchart-would-include-a-workf-1755925825568_1755925825569.txt
utils/: ai_insights.py  data_processor.py  export_utils.py  trend_detector.py  visualizations.py
workflow_engine/: .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  requirements.txt
workflow_engine/api/v1/: workflows.py
workflow_engine/api_gateway/: __init__.py  middleware.py  rate_limiter.py
workflow_engine/auth/: security.py
workflow_engine/config/: settings.py
workflow_engine/core/: ai_processor.py  workflow_engine.py  workflow_monitor.py
workflow_engine/database/: __init__.py  connection.py  models.py
workflow_engine/database/migrations/: 001_initial_schema.sql
workflow_engine/middleware/: __init__.py
workflow_engine/monitoring/: __init__.py  health_checker.py  logger.py  metrics.py  prometheus.yml
workflow_engine/workflows/: loan_application_workflow.py
