[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "cryptography>=45.0.6",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "numpy>=2.3.2",
    "openai>=1.101.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "plotly>=6.3.0",
    "prometheus-client>=0.22.1",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.1",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.35.0",
]
